# sosumi-siri-shortcuts

./: .gitignore  README.md  pyproject.toml
bsiri/: __init__.py  actions.py  cli.py  native_actions.py  shortcuts.py  sosumi.py  workflow.py
bsiri/shortcuts_builder/: cli.py  dump.py  loader.py  shortcut.py  utils.py
bsiri/shortcuts_builder/actions/: __init__.py  appintent.py  b64.py  base.py  calculation.py  calendar.py  conditions.py  contacts.py  date.py  device.py  dictionary.py  documents.py  files.py  input.py  location.py  math.py  media.py  menu.py  messages.py  numbers.py  out.py  photo.py  registry.py  scripting.py  sharing.py  text.py  variables.py  web.py
cli/: Makefile
cli/src/: AppIntentDispatcherBridge.swift  WFAppIntentsProviderShim.swift  bsiri.m  injector.m
examples/: action_types_test.toml  builtin_actions_test.toml  chatgpt_to_notes.toml  conditional_test.toml  full_pipeline_test.toml  ghostty_demo.toml  implicit_chain_test.toml  multi_var_test.toml  simple_note.toml  tailscale_auto_team.toml  tailscale_chatgpt_notes.toml  tailscale_status_to_note.toml
